completed assignment of lecture 3 built header of a webpage using functional componet and aslo done some basic styling and also created a nested div using React.createElement and JSX both

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div id = "root">
@@ -26,7 +27,7 @@
     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
     </script> -->
 
-    <script type="module" src = "./app.js"></script> 
+    <script type="module" src = "./assignment.js"></script> 
     <!-- browser treats this as browser script so by writing here type="module"
      we are telling the browser that is not a normal browser scritp it is a  module-->
 </body>
